<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textSize="26sp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_msg"
        android:layout_marginTop="60dp"/>

    <Spinner
        android:id="@+id/quizCate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/quiz_category"
        android:layout_marginTop="40dp"
        android:spinnerMode="dialog"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_marginTop="40dp"
        android:onClick="startQuiz"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_score"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="showScore"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_unit_id"
        android:layout_marginTop="40dp">
    </com.google.android.gms.ads.AdView>
</LinearLayout>